--- a/food-map.html
+++ b/food-map.html
@@ -56,7 +56,7 @@
             <option value="10">10 mi</option>
             <option value="25">25 mi</option>
         </select>
-        <select>
+        <select id="optionSelect">
             <option v-for="option in options" v-text="option"></option>
         </select>
         <button @click="searchButton">Search</button>
@@ -80,7 +80,8 @@
                     lat: 43.083040,
                     lng: -77.6799,
                     radius: 8047,
-                    search: ""
+                    search: "",
+                    category: "Afghan"
                 },
                 methods:
                 {
@@ -122,7 +123,7 @@
                             "&lat=" + this.lat +
                             "&lng=" + this.lng +
                             "&rad=" + this.radius +
-                            "&cat=" + ""; //Replace with currently selected catagory
+                            "&cat=" + this.category;
 
                         let xhr = new XMLHttpRequest();
 
@@ -211,6 +212,11 @@
             {
                 app.radius = Math.round(radVal * 1609.344);
             }
+        };
+        
+        document.querySelector("#optionSelect").onchange = e =>
+        {
+            app.category = e.target.value;
         };
         
         let categories = [];
